[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game_world/world_manager.gd" type="Script" id=1]
[ext_resource path="res://core/ui/main_hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/camera/orbit_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/systems/agent_spawner.gd" type="Script" id=4]

[node name="MainGameScene" type="Node"]

[node name="WorldManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AgentSpawner" type="Node" parent="WorldManager"]
script = ExtResource( 4 )

[node name="MainHUD" parent="." instance=ExtResource( 2 )]

[node name="CurrentZoneContainer" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="OrbitCamera" parent="." instance=ExtResource( 3 )]
